2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merge 24846:24891 from trunk.
	
2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Clean up code for two-column toolbox.
	
	* app/actions/dialogs-commands.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimpwidgets-constructors.c
	* app/widgets/gimpsessioninfo-book.c
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/gimpsessioninfo-book.h
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdockbook.h
	* app/widgets/gimpsessioninfo-dock.c
	* app/widgets/gimpdockable.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdock.h
	* app/widgets/gimpdockseparator.c
	* app/widgets/gimpdockseparator.h

2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimptooloptionseditor.c: Remove shadow
	from viewport.

2008-02-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpcontainerentry.[ch]
	* app/widgets/gimpviewablebox.[ch]: Change appearance of
	selector widgets, and add code for packing the components
	into a table.

2008-02-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Place scale entry code into separate files, no
	functional changes.

	* libgimpwidgets/gimpscaleentry.c
	* libgimpwidgets/gimpscaleentry.h: new files.
	
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgets.c
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/Makefile.am: changed accordingly.

2008-02-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged 24822:24845 from trunk.
	
2008-02-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Initial implementation of two-column docks.  Needs
	some fixes and a lot of cleanup.  Docks are made
	to contain a GtkHPaned instead of just a VBox.

	* app/widgets/gimpviewrenderer.c
	* app/widgets/gimptoolbox.[ch]
	* app/widgets/gimpsessioninfo.h
	* app/widgeapp/widgets/gimpsessioninfo-dock.c
	* app/widgets/gimpsessioninfo-dock.c
	* app/widgets/gimpdock.[ch]
	* app/widgets/gimpdockseparator.[ch]
	* app/widgets/gimpdockbook.[ch]
