@@ -130,14 +130,14 @@ gimp_paint_mode_menu_new (gboolean with_behind_mode,
                                            GIMP_COLOR_MODE,
                                            GIMP_VALUE_MODE);
 
-/*   gimp_int_store_insert_separator_after (GIMP_INT_STORE (store), */
-/*                                          GIMP_DISSOLVE_MODE, -1); */
-/*   gimp_int_store_insert_separator_after (GIMP_INT_STORE (store), */
-/*                                          GIMP_OVERLAY_MODE, -1); */
-/*   gimp_int_store_insert_separator_after (GIMP_INT_STORE (store), */
-/*                                          GIMP_GRAIN_MERGE_MODE, -1); */
-/*   gimp_int_store_insert_separator_after (GIMP_INT_STORE (store), */
-/*                                          GIMP_LIGHTEN_ONLY_MODE, -1); */
+  gimp_int_store_insert_separator_after (GIMP_INT_STORE (store),
+                                         GIMP_DISSOLVE_MODE, -1);
+  gimp_int_store_insert_separator_after (GIMP_INT_STORE (store),
+                                         GIMP_OVERLAY_MODE, -1);
+  gimp_int_store_insert_separator_after (GIMP_INT_STORE (store),
+                                         GIMP_GRAIN_MERGE_MODE, -1);
+  gimp_int_store_insert_separator_after (GIMP_INT_STORE (store),
+                                         GIMP_LIGHTEN_ONLY_MODE, -1);
 
   if (with_behind_mode)
     {
@@ -165,7 +165,9 @@ gimp_paint_mode_menu_new (gboolean with_behind_mode,
   combo = gimp_enum_combo_box_new_with_model (GIMP_ENUM_STORE (store));
   g_object_unref (store);
 
-  gtk_combo_box_set_wrap_width (GTK_COMBO_BOX (combo), 2);
+  gtk_combo_box_set_add_tearoffs (GTK_COMBO_BOX (combo), TRUE);
+  gtk_combo_box_set_title (GTK_COMBO_BOX (combo), _("Paint mode"));
+/*   gtk_combo_box_set_wrap_width (GTK_COMBO_BOX (combo), 2); */
 
   gtk_combo_box_set_row_separator_func (GTK_COMBO_BOX (combo),
                                         gimp_paint_mode_menu_separator_func,
